ConsultingHub/force-app/main/default/objects/ia_Asset__c/ia_Asset__c.object-meta.xml
<CustomObject>
    <description>Asset maintained by the Implementation Architect team</description>
    <label>IA Asset</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IA Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>