ConsultingHub/force-app/main/default/objects/ia_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Demonstration</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>KB Article</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>User Guide</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Worksheet</fullName>
            </value>
            <value>
                <fullName>AppExchange Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>