ConsultingHub/force-app/main/default/objects/ia_Asset__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Choose the language for the Asset</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>