ConsultingHub/force-app/main/default/objects/ia_Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field defaults to New on creation.  When a new IA Asset is created by a non IA Engage Admin user, a process builder notifies the admin user group accordingly so that they can review the asset to determine if it should be added as an engagement type asset.  This field supports that process builder criteria and can be used to track process of the review.</description>
    <inlineHelpText>Tracks the review of new IA Assets to monitor duplicates and create Engagement Type Assets as needed.

-Defaults to New
-Process marks Submitted
-Reviewer can update to In Progress or Needs Revision
-Complete when done</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Needs Revision</fullName>
            </value>
            <value>
                <fullName>Submitted for Review</fullName>
            </value>
            <value>
                <fullName>Review in Progress</fullName>
            </value>
            <value>
                <fullName>Review Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>