ConsultingHub/force-app/main/default/objects/ia_Asset__c/listViews/CPQ_IA_Assets.listView-meta.xml
<ListView>
    <fullName>CPQ_IA_Assets</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Location__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>contains</operation>
        <value>CPQ</value>
    </filters>
    <filters>
        <field>Name__c</field>
        <operation>equals</operation>
        <value>Billing</value>
    </filters>
    <label>CPQ IA Assets</label>
</ListView>