ConsultingHub/force-app/main/default/objects/ia_Asset__c/listViews/FSL_Assets.listView-meta.xml
<ListView>
    <fullName>FSL_Assets</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>contains</operation>
        <value>FSL</value>
    </filters>
    <label>FSL Assets</label>
</ListView>