ConsultingHub/force-app/main/default/objects/ia_Asset__c/listViews/Submitted_for_Review.listView-meta.xml
<ListView>
    <fullName>Submitted_for_Review</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Review Completed</value>
    </filters>
    <label>New and Submitted</label>
</ListView>